# AI-Trading-Bot

./: .env  .env.example  .gitattributes  .gitignore  Makefile  Readme.md  Readme.md.txt  RunBot.bat  RunBot.ps1  Top_ATR_Sweep_Candidates.csv  __tmp_app.js  __tmp_check.py  __tmp_exec.py  __tmp_tasks_attrs.py  add_symbol_log.py  app.py  config.yaml  edit_script.py  meta_selector.yaml  prefect.yaml  prefect_deployments.py  pyproject.toml  run.py  temp_patch_models.txt  tmp_plan_config.yaml  tmp_plan_config_momo.yaml  tmp_read_section.py  warehouse.duckdb
analysis/: backtest_report.py  latency_arbitrage_sim.py
blocks/: register_blocks.py
cloud/: gcp_sweep_runner.sh
conf/: cadence.yaml  sources.yaml  storage.yaml
configs/: adausd_maker_keltner_ride.yaml  adausd_maker_reversion_band.yaml  dogeusd_maker_keltner_ride.yaml  dogeusd_maker_reversion_band.yaml  ethusd_maker_keltner_ride.yaml  ethusd_maker_reversion_band.yaml  solusd_maker_keltner_ride.yaml  solusd_maker_reversion_band.yaml  strategy_manifest.yaml  xbtusd_1h_maker_swing.yaml  xbtusd_1h_maker_trend_breakout.yaml  xbtusd_maker_keltner_ride.yaml  xbtusd_maker_range_scalper.yaml  xbtusd_maker_reversion_band.yaml  xbtusd_maker_rsi_divergence.yaml  xbtusd_maker_trend_pullback.yaml  xbtusd_maker_vol_expansion.yaml  xbtusd_maker_vwap_reversion.yaml  xbtusd_taker_momo_burst.yaml  xrpusd_maker_keltner_ride.yaml  xrpusd_maker_reversion_band.yaml
deployment/: live_agent_runner.py  monitoring.py  phases.py
docker/: docker-compose.kafka.yml  prefect-agent.Dockerfile
docs/: cloud_sweeps_gcp.md  data_contracts.md
(+4492 files in other folders)
