[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-bot"
version = "0.1.0"
description = "AI-assisted trading bot with data pipeline, ML model training, and backtesting utilities."
authors = [{name = "AI Trading Bot Maintainers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "yfinance>=0.2.30",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "duckdb>=0.9",
    "httpx>=0.24",
    "polars>=0.20",
    "prefect>=2.14",
    "requests>=2.31",
    "streamlit>=1.32",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.7",
    "ruff>=0.1.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
